- Fix Indexes for changeDescriptions